<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp"
    android:paddingVertical="4dp">

    <TextView
        android:id="@+id/orangeText"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/bg_box_rounded_16"
        android:backgroundTint="#eef2f5"
        android:padding="8dp"
        android:text="@string/orange_image"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/orangeJuiceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/orange_juice"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/orangeText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orange_juice_ml"
        app:layout_constraintStart_toStartOf="@id/orangeJuiceText"
        app:layout_constraintTop_toBottomOf="@id/orangeJuiceText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orange_juice_calorie"
        android:textColor="@color/pink_300"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/orangeJuiceText"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>